@@ -69,6 +69,8 @@ See also: :doc:`Handling Errors in libbson <bson:errors>`.
 +-----------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | ``MONGOC_ERROR_GRIDFS``           | ``MONGOC_ERROR_GRIDFS_CHUNK_MISSING``                                                                                           | The GridFS file is missing a document in its ``chunks`` collection.                                                                                                                                                                                                                                                                        |
 +-----------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|                                   | ``MONGOC_ERROR_GRIDFS_CORRUPT``                                                                                                 | A data inconsistency was detected in GridFS.                                                                                                                                                                                                                                                                                               |
++-----------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 |                                   | ``MONGOC_ERROR_GRIDFS_INVALID_FILENAME``                                                                                        | You passed a NULL filename to :symbol:`mongoc_gridfs_remove_by_filename`.                                                                                                                                                                                                                                                                  |
 +-----------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 |                                   | ``MONGOC_ERROR_GRIDFS_PROTOCOL_ERROR``                                                                                          | You called :symbol:`mongoc_gridfs_file_set_id` after :symbol:`mongoc_gridfs_file_save`.                                                                                                                                                                                                                                                    |
