@@ -115,6 +115,7 @@ typedef enum {
    MONGOC_ERROR_CHANGE_STREAM_NO_RESUME_TOKEN,
    MONGOC_ERROR_CLIENT_SESSION_FAILURE,
    MONGOC_ERROR_TRANSACTION_INVALID_STATE,
+   MONGOC_ERROR_GRIDFS_CORRUPT,
 } mongoc_error_code_t;
 
 MONGOC_EXPORT (bool)
